Fix to allow header overflow when menu is shown

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -161,6 +161,10 @@ strong code {
     min-width: 310px;
 }
 
+.header:not(.no-overflow) {
+    overflow: hidden;
+}
+
 .header.no-z-index {
     z-index: 0;
 }
